@@ -28,8 +28,6 @@
  */
 class extra_images {
 public:
-	extra_images() {}
-
 	/// add all filenames found in the given paths, recursively
 	void populate(std::vector<std::string> const & paths);	
 
