@@ -128,11 +128,10 @@ void sort_options::sort(symbol_collection & syms,
 	long_filenames = lf;
 
 	std::vector<sort_order> sort_option(options);
-	for (sort_order cur = first; cur != last; ) {
+	for (sort_order cur = first; cur != last; cur = sort_order(cur + 1)) {
 		if (find(sort_option.begin(), sort_option.end(), cur) ==
 		    sort_option.end())
 			sort_option.push_back(cur);
-		cur = sort_order(cur + 1);
 	}
 
 	stable_sort(syms.begin(), syms.end(),
